kubernetes/deployments/traefik/traefik-dashboard.yaml
# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: basic-auth-creds
#   namespace: traefik
# type: kubernetes.io/basic-auth
# stringData:
#   username: test
#   password: password

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: basic-auth
#   namespace: traefik
# spec:
#   basicAuth:
#     secret: basic-auth-creds

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`, `/dashboard/`) || PathPrefix(`/api`, `/api/`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # middlewares:
      #   - name: basic-auth
      #     namespace: traefik
    - match: Host(`traefik.k3s.local`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
